--- a/ATV_JS/Questao1/HTML1.html
+++ b/ATV_JS/Questao1/HTML1.html
@@ -8,7 +8,7 @@
 
     <title>Questão 1</title>
 </head>
-<script src="Script.js"></script>
+<script src="Script1.js"></script>
 <body>
     
     <h1>Questão 1</h1>
