--- a/ATV_JS/Questao7/HTML7.html
+++ b/ATV_JS/Questao7/HTML7.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Botão que muda de posição ao passar o mouse</title>
+	
 	<meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Questão 8</title>
 </head>
 <script src="Js7.js"></script>
 <body>
-	<h1>Botão que muda de posição ao passar o mouse</h1>
-	<button id="botao" onmouseover="mudarPosicao()">Clique aqui</button>
+	<h1>Botão que muda de posição</h1>
+	<button id="botao" onmouseover="muda()">Clique aqui</button>
 </body>
 </html>
