--- a/ATV_JS/Questao6/HTML6.html
+++ b/ATV_JS/Questao6/HTML6.html
@@ -4,6 +4,7 @@
 	<title>Copiar texto para uma lista</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Questão 6</title>
 </head>
 <script src="Js6.js"></script>
 <body>
