--- a/ATV_JS/Questao3/HTML3.html
+++ b/ATV_JS/Questao3/HTML3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script></script>
-    <title>Document</title>
+    <title>Questão 3</title>
     <style>
         #numeros{
             display: flex;
