--- a/ATV_JS/Questao2/HTML2.html
+++ b/ATV_JS/Questao2/HTML2.html
@@ -9,15 +9,15 @@
 <body>
     <div>
         <h4>Window</h4>
-        <p>Window é uma representaçãod e uma janela do navegador onde contem alguns recursos que auxiliam no desenvolvimento do site.</p>
+        <p>Window é uma representação de uma janela do navegador onde contem alguns recursos que auxiliam no desenvolvimento do site.</p>
     </div>
     <div>
         <h4>Document</h4>
-        <p></p>
+        <p>Faz referência aos documentos guardados e que podem ser chamados para modificar o documento HTML</p>
     </div>
     <div>
         <h4>Location</h4>
-        <p></p>
+        <p>Traz coisas em relação da localização dos documentos e referências</p>
     </div>
     <div>
         <h4>History</h4>
@@ -26,4 +26,14 @@
     
 
 </body>
+Essas variáveis são chamadas de objetos de host do navegador e as mais comuns são: 
+window, document, location e history.
+
+window.alert(): exibe uma caixa de diálogo com uma mensagem.
+
+document.getElementById(): retorna um elemento HTML com um determinado ID.
+
+location.href: retorna a URL completa do documento
+
+history.back(): navega para a página anterior no histórico de navegação.
 </html>
