--- a/ATV_JS/Questao2/HTML2.html
+++ b/ATV_JS/Questao2/HTML2.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão 2</title>
+    <style>
+        body{
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            width: 100vw;
+            background-color: aquamarine;
+        }
+        h4,h1{
+            align-items: center;
+            text-shadow: 2px;
+            margin-right: 5px;
+            color: darkblue;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        p{
+            align-items: normal;
+            color: crimson;
+            font-size: medium;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <div>
+        <h1>O que é?</h1>
         <h4>Window</h4>
         <p>Window é uma representação de uma janela do navegador onde contem alguns recursos que auxiliam no desenvolvimento do site.</p>
     </div>
@@ -21,19 +44,7 @@
     </div>
     <div>
         <h4>History</h4>
-        <p></p>
+        <p>Contem as URLs que o cliente pesquisou</p>
     </div>
-    
-
 </body>
-Essas variáveis são chamadas de objetos de host do navegador e as mais comuns são: 
-window, document, location e history.
-
-window.alert(): exibe uma caixa de diálogo com uma mensagem.
-
-document.getElementById(): retorna um elemento HTML com um determinado ID.
-
-location.href: retorna a URL completa do documento
-
-history.back(): navega para a página anterior no histórico de navegação.
 </html>
