--- a/ATV_JS/Questao10/HTML10.html
+++ b/ATV_JS/Questao10/HTML10.html
@@ -10,26 +10,28 @@
     <title>Questão 10</title>
 </head>
 <body class="container">
-    <input type="text" class="display" readonly>
-    <div class="button">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
-        <button>0</button>
-        <button>.</button>
-        <button>=</button>
-        <button>+</button>
-        <button id="limpar">Clear</button>
-    </div>
+    <div class="calculator">
+        <div class="calculator-display" id="resultado"></div>
+        <div class="calculator-buttons">
+            <input type="button" class="calculator-button" value="7" onclick="inserirNumero('7')">
+            <input type="button" class="calculator-button" value="8" onclick="inserirNumero('8')">
+            <input type="button" class="calculator-button" value="9" onclick="inserirNumero('9')">
+            <input type="button" class="calculator-button operation" value="/" onclick="definirOperacao('/')">
+            <input type="button" class="calculator-button" value="4" onclick="inserirNumero('4')">
+            <input type="button" class="calculator-button" value="5" onclick="inserirNumero('5')">
+            <input type="button" class="calculator-button" value="6" onclick="inserirNumero('6')">
+            <input type="button" class="calculator-button operation" value="*" onclick="definirOperacao('*')">
+            <input type="button" class="calculator-button" value="1" onclick="inserirNumero('1')">
+            <input type="button" class="calculator-button" value="2" onclick="inserirNumero('2')">
+            <input type="button" class="calculator-button" value="3" onclick="inserirNumero('3')">
+            <input type="button" class="calculator-button operation" value="-" onclick="definirOperacao('-')">
+            <input type="button" class="calculator-button" value="0" onclick="inserirNumero('0')">
+            <input type="button" class="calculator-button" value="." onclick="inserirNumero('.')">
+            <input type="button" class="calculator-button operation" value="+" onclick="definirOperacao('+')">
+            <input type="button" class="calculator-button" value="=" onclick="calcular()">
+        </div>
+            <input type="button" class="calculator-button" value="Limpar" id="limpar" onclick="limpar()">
+        </div>
     
 </body>
 </html>
