--- a/ATV_JS/Questão9/HTML9.html
+++ b/ATV_JS/Questão9/HTML9.html
@@ -7,6 +7,9 @@
     <title>Questão 9</title>
     <script src="Js9.js"></script>
     <style>
+        body{
+          background-color: crimson;
+        }
         .container {
           display: flex;
           flex-direction: column;
@@ -22,6 +25,7 @@
           width: 300px;
         }
         .output {
+          background-color: lightcoral;
           flex-direction: column;
           align-items: center;
           margin-top: 20px;
