--- a/Prova_revisao/prova/saibamais/HTMLp.html
+++ b/Prova_revisao/prova/saibamais/HTMLp.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cardCSS.css">
+    <link rel="stylesheet" href="styleModel.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-       
-        <div class="box">
-           <button class="btn">Saiba Mais</button>
-        </div>
-    </div>
+    <div  class="container">
+        <div class="campo">
+            <button class="btn">button</button>
+    	</div>
+ </div>
 </body>
 </html>
+
