--- a/Prova_revisao/prova/saibamais/HTMLp.html
+++ b/Prova_revisao/prova/saibamais/HTMLp.html
@@ -10,7 +10,7 @@
 <body>
     <div  class="container">
         <div class="campo">
-            <button class="btn">button</button>
+            <button class="btn">Saiba Mais</button>
     	</div>
  </div>
 </body>
