--- a/ATV_JS/Questão9/HTML9.html
+++ b/ATV_JS/Questão9/HTML9.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="container">
-      <h1>Array Input</h1>
+      <h1>Lista Pessoal</h1>
       <input type="text" id="input" placeholder="Digite os elementos separados por vírgula">
       <button onclick="printArray()">Imprimir</button>
       <div class="output" id="output"></div>
